spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_enum_variants.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum E {
    A,
    B,
    A,
}


error: Multiple options called A
  ┌─ testinput:4:5
  │
2 │     A,
  │     - Previously occurred here
3 │     B,
4 │     A,
  │     ^ A occurs more than once


